output-json: add sensor-name config variable
When using redis output, we are loosing the host key (added by
logstash or logstash-forwarder) and we can't find anymore what
Suricata did cause the alert.

This patch is adding this key during message generation using the
'sensor-name' variable or the hostname is 'sensor-name' is not
defined.

--- a/suricata.yaml.in
+++ b/suricata.yaml.in
@@ -99,6 +99,7 @@ outputs:
       #facility: local5
       #level: Info ## possible levels: Emergency, Alert, Critical,
                    ## Error, Warning, Notice, Info, Debug
+      #sensor-name: suricata ## default to hostname value
       #redis:
       #  server: 127.0.0.1
       #  port: 6379
