af-packet: add zero-copy option
This patch adds an option to the af-packet configuration to be able
to disable the use of zero copy (using pointer to packet data
instead of copying the data). This will allow to release the kernel
data faster and prevent kernel ring buffer overrun in some running
modes.

--- a/suricata.yaml.in
+++ b/suricata.yaml.in
@@ -434,6 +434,8 @@ af-packet:
     #rollover: yes
     # To use the ring feature of AF_PACKET, set 'use-mmap' to yes
     use-mmap: yes
+    # Set to false to always copy packet data
+    #zero-copy: false
     # Ring size will be computed with respect to max_pending_packets and number
     # of threads. You can set manually the ring size in number of packets by setting
     # the following value. If you are using flow cluster-type and have really network
