af-packet: ebpf with hardcoded epbf

--- a/configure.ac
+++ b/configure.ac
@@ -1201,11 +1201,10 @@
             AC_DEFINE([HAVE_HW_TIMESTAMPING],[1],[Hardware timestamping support is available]),
             [],
             [[#include <linux/net_tstamp.h>]]),
-        AC_CHECK_DECL([PACKET_FANOUT_EPBF],
+        AC_CHECK_DECL([PACKET_FANOUT_EBPF],
             AC_DEFINE([HAVE_PACKET_EBPF],[1],[Recent ebpf fanout support is available]),
             [],
             [[#include <linux/if_packet.h>]])
-
     ])
 
   # Netmap support
