--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -364,6 +364,7 @@ util-decode-der-get.c util-decode-der-get.h \
 util-decode-mime.c util-decode-mime.h \
 util-detect-file-hash.c util-detect-file-hash.h \
 util-device.c util-device.h \
+util-ebpf.c util-ebpf.h \
 util-enum.c util-enum.h \
 util-error.c util-error.h \
 util-file.c util-file.h \
