--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -223,6 +223,7 @@ detect-modbus.c detect-modbus.h \
 detect-xbits.c detect-xbits.h \
 flow-bit.c flow-bit.h \
 flow.c flow.h \
+flow-bypass.c flow-bypass.h \
 flow-hash.c flow-hash.h \
 flow-manager.c flow-manager.h \
 flow-queue.c flow-queue.h \
