--- a/.travis.yml
+++ b/.travis.yml
@@ -103,7 +103,7 @@ before_install:
             libyaml-0-2 libyaml-dev zlib1g zlib1g-dev libcap-ng-dev \
             libcap-ng0 make libmagic-dev libnetfilter-queue-dev \
             libnetfilter-queue1 libnfnetlink-dev libnfnetlink0 \
-            libhiredis-dev
+            libhiredis-dev linux-headers
 
 
         if [[ "$ENABLE_COCCI" == "yes" ]]; then
